# Advanced_Youtube_Search_tool

./: .gitignore  README.md  TODO.md  dsadsa.py  login.py  main.py  pyproject.toml  requirements.txt  setup.sh  test.py  upload.py
backend/: main.py
backend/api/: auth_router.py
backend/app/: config.py
backend/app/api/: main.py
backend/app/api/routes/: auth_router.py  search_router.py  user_router.py  video_router.py
backend/app/core/: config.py
backend/app/models/: user.py
backend/app/schemas/: search.py  user.py  video.py
backend/app/services/: auth_service.py  delete_service.py  search_service.py  update_service.py  upload_service.py
backend/crud/: base.py  user.py
backend/migrations/: 001_enable_pgvector.sql
backend/pipeline/: ai_pipeline.py
backend/services/: auth_service.py
backend/static/: style.css
backend/templates/: index.html
frontend/: app.py
src/: authenticate.py  db_connect.py  main.py
src/pages/: login_page.py  user_page.py
tests/: test_auth.py  test_video.py
