[project]
name = "advance-youtube-search-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "cachetools==6.2.6",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cryptography==48.0.0",
    "deprecation==2.1.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.136.3",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.16",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mmh3==5.2.1",
    "multidict==6.7.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "packaging==26.2",
    "pillow>=12.2.0",
    "pluggy==1.6.0",
    "postgrest==2.30.0",
    "propcache==0.5.2",
    "pycparser==3.0",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pydantic[email]==2.13.4",
    "pygments==2.20.0",
    "pyiceberg==0.11.1",
    "pyjwt==2.13.0",
    "pyparsing==3.3.2",
    "pyroaring==1.1.0",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.29",
    "realtime==2.30.0",
    "requests==2.34.2",
    "rich==14.3.4",
    "scenedetect[opencv]>=0.7",
    "sentence-transformers>=5.5.1",
    "six==1.17.0",
    "starlette==1.2.0",
    "storage3==2.30.0",
    "streamlit>=1.58.0",
    "strenum==0.4.15",
    "strictyaml==1.7.3",
    "supabase==2.30.0",
    "supabase-auth==2.30.0",
    "supabase-functions==2.30.0",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.48.0",
    "vecs>=0.4.5",
    "websockets==15.0.1",
    "yarl==1.24.2",
    "zstandard==0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
